--- a/portfolio.html
+++ b/portfolio.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Assets/CSS/style.css">
     <title>Boot Strap Portfolio</title>
 </head>
 <body>
     <div class="container">
-    <div class="row">
-    <header>Kendra
-       <a href=index.html>About</a>
-       <a href=#>Portfolio</a>
-       <a href=contact.html>Contact</a>
+    <div class="row header">
+    <header>
+        <h1>Kendra</h1>
+       <a class="nav" href="index.html">About</a>
+       <a class="nav" href="#">Portfolio</a>
+       <a class="nav" href="contact.html">Contact</a>
     </header>    
     </div>    
     </div>
-        <div class="work" "container">
+        <div class="container work">
             <div class="row">
             <div class="col-md-3">
                 <img src="Assets/Images/Ants.jpg" alt="Ant"class="img-responsive">
@@ -40,12 +42,18 @@
                 <img src="Assets/images/Sushi.jpg" alt="Sushi"class="img-responsive">
                 <h2>Rutgers Info Widget</h2>
             </div>
-             <div class="col-md-2" "nav">
+             <div class="col-md-2 social">
                 <h2>Connect With Me</h2>
-                    <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" alt="Github" class="img-responsive">
-                    <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_square_color-64.png" alt"Linkedin" class="img-responsive">
-                    <img src="https://cdn4.iconfinder.com/data/icons/socialcones/508/StackOverflow-64.png" class="img-responsive">
+                <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" class="social img-responsive"alt="GitHub" /></a>
+                <a href="#"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_square_color-64.png" class="social img-responsive" alt="LinkedIn" /></a>
+                <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/socialcones/508/StackOverflow-64.png" class="social img-responsive"alt="Stack Overflow" /></a>
     </div>
     </div>
+    </div>
+ <footer class="footer">
+    <div class="container">
+         Copyright &kendra; 
+    </div>
+</footer>
 </body>
 </html>
