added contact page

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <title>BootStrap Portfolio</title>
 </head>
 <body>
+  <div class="wrapper">
   <div class="container">
     <div class="row header">
         <header>
-    <div class="col-md-12"></div>
+    <div class="col-md-12">
         <h1>Kendra</h1>
         <a class="nav" href="#">About</a>
         <a class="nav" href="portfolio.html">Portfolio</a>
         <a class="nav" href="contact.html">Contact</a>
       </header>    
-  </div>    
+</div>
+</div>    
   </div>
 <div class="row">
 <div class="col-md-1">  
@@ -37,7 +39,10 @@
 </div>
 </div>  
 </div>
-<footer class="footer">
+<div class="push">
+</div>    
+</div>
+<footer>
      <div class="container">
      Copyright &kendra; 
     </div>
