--- a/contact.html
+++ b/contact.html
@@ -19,21 +19,48 @@
         </header>    
     </div>    
     </div> 
+    <div class="container">
     <div class="row">
-            <div class="col-md-1">  
+    <div class="col-md-6">
+              <label for="Name">Name</label>
+              <input type"name" class="form-control"  placeholder="Enter Name">
+              <label for="Email">Email</label>
+              <input type="Email" class="form-control" placeholder="name@gmail.com">
+              <label for="exampleInputFile">Message</label>
+              <textarea class="form-control" rows="3"></textarea>
             </div>
-             <div class="col-md-6">
-                 <h1>About Me</h1>
-                <img src="http://www.placepuppy.net/300/200">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus quae commodi adipisci cum distinctio quibusdam dolores non accusamus assumenda nulla tempora aliquid, quam, debitis voluptas in culpa reiciendis voluptate nihil!</p>
-            </div>
-        <div class="col-md-2 social">
+    <div class="col-md-2"></div>
+    <div class="col-md-2 social">
             <h2>Connect With Me</h2>
             <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" class="social img-responsive"alt="GitHub" /></a>
             <a href="#"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_square_color-64.png" class="social img-responsive" alt="LinkedIn" /></a>
             <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/socialcones/508/StackOverflow-64.png" class="social img-responsive"alt="Stack Overflow" /></a>
 
     </div>
+    </div>
+    <!-- <div class="row">
+    <div class="col-md-6">
+              <label for="Email">Email</label>
+              <input type="Email" class="form-control" placeholder="name@gmail.com">
+    </div>
+    </div> -->
+    <!-- <div class="row">
+    <div column="col-md-6">
+              <label for="exampleInputFile">Message</label>
+              <textarea class="form-control" rows="3"></textarea>
+    </div>
+    </div> -->
+              <p class="help-block">Click to submit.</p>
+            <button type="submit" class="btn btn-default">Submit</button>
+        
+        <!-- <div class="col-md-2 social">
+            <h2>Connect With Me</h2>
+            <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" class="social img-responsive"alt="GitHub" /></a>
+            <a href="#"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_square_color-64.png" class="social img-responsive" alt="LinkedIn" /></a>
+            <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/socialcones/508/StackOverflow-64.png" class="social img-responsive"alt="Stack Overflow" /></a>
+
+    </div> -->
+</div>
     </div>
    </div> 
 <footer class="footer">
