--- a/index.html
+++ b/index.html
@@ -9,43 +9,41 @@
     <title>BootStrap Portfolio</title>
 </head>
 <body>
-  <div class="wrapper">
-  <div class="container">
-    <div class="row header">
-        <header>
-    <div class="col-md-12">
+  <div class="container-fluid">
+  <div class="row header">
+    <header>
+  <div class="col-md-12">
         <h1>Kendra</h1>
         <a class="nav" href="#">About</a>
         <a class="nav" href="portfolio.html">Portfolio</a>
         <a class="nav" href="contact.html">Contact</a>
-      </header>    
-</div>
-</div>    
+    </header>    
+ </div>
+ </div>    
   </div>
+  <div class="container">
 <div class="row">
 <div class="col-md-1">  
 </div>
- <div class="col-md-6">
-     <h1>About Me</h1>
+ <div class="col-md-6 content">
+     <h1 class="about">About Me</h1>
     <img src="http://www.placepuppy.net/300/200">
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus quae commodi adipisci cum distinctio quibusdam dolores non accusamus assumenda nulla tempora aliquid, quam, debitis voluptas in culpa reiciendis voluptate nihil!</p>
 </div>
-    <div class="col-md-2 social">
+<div class="col-md-1"></div> 
+    <div class="col-md-3 social">
     <h2>Connect With Me</h2>
     <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" class="social img-responsive"alt="GitHub" /></a>
     <a href="#"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_square_color-64.png" class="social img-responsive" alt="LinkedIn" /></a>
     <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/socialcones/508/StackOverflow-64.png" class="social img-responsive"alt="Stack Overflow" /></a>
 </div>
-</div>
+</div> 
+</div> 
 </div>  
-</div>
-<div class="push">
-</div>    
-</div>
-<footer>
-     <div class="container">
-     Copyright &kendra; 
-    </div>
-</footer>
+<footer class="footer">
+        <div class="container">
+            <span> Copyright @kendra </span>
+        </div>
+    </footer>
 </body>
 </html>
