--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <title>Boot Strap Portfolio</title>
 </head>
 <body>
-    <div class="container">
+    <div class=.container-fluid>
     <div class="row header">
     <header>
         <h1>Kendra</h1>
@@ -17,42 +17,45 @@
        <a class="nav" href="#">Portfolio</a>
        <a class="nav" href="contact.html">Contact</a>
     </header>    
-    </div>    
+    </div> 
     </div>
-        <div class="container work">
-            <div class="row">
-            <div class="col-md-3">
-                <img src="Assets/Images/Ants.jpg" alt="Ant"class="img-responsive">
-                <h2>Hangman</h2>
-            </div>
-            <div class="work">
-                <img src="Assets/images/Cat.jpg" alt="Cat"class="img-responsive">
-                <h2>RPG Game</h2>
-            </div>
-            </div>
-            <div class="col-md-3">
-                <img src="Assets/images/Dog.jpg" alt="Dog"class="img-responsive">
-                <h2>Trivia Game</h2>
-            </div>
-            <div class="work">
-                <img src="Assets/images/Record.jpg" alt="Record"class="img-responsive">
-                <h2>Rock Paper Scissors</h2>
-            </div>
-            <div class="col-md-3">
-                <img src="Assets/images/Sushi.jpg" alt="Sushi"class="img-responsive">
-                <h2>Rutgers Info Widget</h2>
-            </div>
-             <div class="col-md-2 social">
-                <h2>Connect With Me</h2>
-                <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" class="social img-responsive"alt="GitHub" /></a>
-                <a href="#"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_square_color-64.png" class="social img-responsive" alt="LinkedIn" /></a>
-                <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/socialcones/508/StackOverflow-64.png" class="social img-responsive"alt="Stack Overflow" /></a>
+    <div class=container>  
+    <div class="row">
+     <div class="col-md-1"></div>
+     <div class="col-md-6 work">
+         <h1 class="about">Portfolio</h1>
+         <div class="work">
+         <img src="Assets/Images/Ants.jpg" alt="Ant"class="img-responsive">
+         <h3>Hangman</h2>
+        </div>
+         <img src="Assets/images/Sushi.jpg" alt="Sushi"class="img-responsive">
+         <h3>Rutgers Info Widget</h2>
+         <div class="work">
+         <img src="Assets/images/Cat.jpg" alt="Cat"class="img-responsive">
+         <h3>RPG Game</h2>
+        </div>
+        <div class="work">
+        <img src="Assets/images/Dog.jpg" alt="Dog"class="img-responsive">
+        <h3>Trivia Game</h2>
+    </div>
+    <div class="work">
+        <img src="Assets/images/Record.jpg" alt="Record"class="img-responsive">
+        <h3>Rock Paper Scissors</h2>
+        </div>
+    </div>
+    <div class="col-md-1"></div>
+        <div class="col-md-3 social">
+        <h2 class="connect">Connect With Me</h2>
+        <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" class="social img-responsive"alt="GitHub" /></a>
+        <a href="#"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_square_color-64.png" class="social img-responsive" alt="LinkedIn" /></a>
+        <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/socialcones/508/StackOverflow-64.png" class="social img-responsive"alt="Stack Overflow" /></a>
     </div>
     </div>
     </div>
- <footer class="footer">
+    </div>
+ <footer class="footer2">
     <div class="container">
-         Copyright &kendra; 
+        <span> Copyright @kendra </span>
     </div>
 </footer>
 </body>
