--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
     <div class="row header">
     <header>
         <h1>Kendra</h1>
-        <a class="nav" href="index.html">About</a>
-        <a class="nav" href="portfolio.html">Portfolio</a>
         <a class="nav" href="#">Contact</a>
+        <a class="nav" href="portfolio.html">Portfolio</a>
+        <a class="nav" href="index.html">About</a>
         </header>       
     </div> 
     <div class="container">
@@ -45,7 +45,7 @@
    </div> 
    <footer class="footer">
      <div class="container">
-      <span> Copyright @kendra </span>
+      <span> &copyKendra2018 </span>
 </footer> 
 </div>
 </body>
