--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class="row header">
     <header>
   <div class="col-md-12">
-        <h1>Kendra</h1>
-        <a class="nav" href="#">About</a>
-        <a class="nav" href="portfolio.html">Portfolio</a>
+        <h1>Kendra</h1>  
         <a class="nav" href="contact.html">Contact</a>
+        <a class="nav" href="portfolio.html">Portfolio</a>
+        <a class="nav" href="#">About</a>
     </header>    
  </div>
  </div>    
@@ -42,7 +42,7 @@
 </div>  
 <footer class="footer">
         <div class="container">
-            <span> Copyright @kendra </span>
+            <span> &copyKendra2018 </span>
         </div>
     </footer>
 </body>
