--- a/portfolio.html
+++ b/portfolio.html
@@ -13,35 +13,39 @@
     <div class="row header">
     <header>
         <h1>Kendra</h1>
-       <a class="nav" href="index.html">About</a>
+        <a class="nav" href="contact.html">Contact</a>
        <a class="nav" href="#">Portfolio</a>
-       <a class="nav" href="contact.html">Contact</a>
+       <a class="nav" href="index.html">About</a>
     </header>    
     </div> 
     </div>
     <div class=container>  
     <div class="row">
      <div class="col-md-1"></div>
-     <div class="col-md-6 work">
+    <div class="col-md-6 work">
+    <div class="col-md-6 work">
          <h1 class="about">Portfolio</h1>
-         <div class="work">
-         <img src="Assets/Images/Ants.jpg" alt="Ant"class="img-responsive">
-         <h3>Hangman</h2>
-        </div>
-         <img src="Assets/images/Sushi.jpg" alt="Sushi"class="img-responsive">
-         <h3>Rutgers Info Widget</h2>
-         <div class="work">
-         <img src="Assets/images/Cat.jpg" alt="Cat"class="img-responsive">
-         <h3>RPG Game</h2>
-        </div>
-        <div class="work">
-        <img src="Assets/images/Dog.jpg" alt="Dog"class="img-responsive">
-        <h3>Trivia Game</h2>
-    </div>
     <div class="work">
+         <img src="Assets/Images/Ants.jpg" alt="Ant"class="img-responsive float-left">
+         <h3>Hangman</h3>
+    </div>
+         <img src="Assets/images/Sushi.jpg" alt="Sushi"class="img-responsive float-left">
+         <h3>Rutgers Info Widget</h3>
+    <div class="work">
+         <img src="Assets/images/Cat.jpg" alt="Cat"class="img-responsive float-left">
+         <h3>RPG Game</h3>
+    </div>
+    </div>
+    <div class="col-md-6 work2">
+        <div>
+        <img src="Assets/images/Dog.jpg" alt="Dog"class="img-responsive">
+        <h3>Trivia Game</h3>
+    </div>
+    <div>
         <img src="Assets/images/Record.jpg" alt="Record"class="img-responsive">
-        <h3>Rock Paper Scissors</h2>
-        </div>
+        <h3>Rock Paper Scissors</h3>
+    </div>
+    </div>
     </div>
     <div class="col-md-1"></div>
         <div class="col-md-3 social">
@@ -52,10 +56,10 @@
     </div>
     </div>
     </div>
-    </div>
+
  <footer class="footer2">
     <div class="container">
-        <span> Copyright @kendra </span>
+        <span> &copyKendra2018 </span>
     </div>
 </footer>
 </body>
